# user_data_etl_pipeline

./: LICENSE  README.md  pyproject.toml  run.sh  transformed_user_data.csv
src/: config.py  extract.py  load.py  transform.py  utils.py
