[tool.poetry]
name = "user-data-etl-pipeline"
version = "0.1.0"
description = "An ETL pipeline that extracts user data from a public API, transforms the data into a clean, analyzable format, and loads it into a PostgreSQL database."
authors = ["tin3ga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
